package ar.edu.utn.frba.dsi.climalert.salientes.notificacion;

public class NotificacionException extends RuntimeException {
	public NotificacionException(String message, Throwable cause) {
		super(message, cause);
	}
}
